using Microsoft.AspNetCore.Identity;

namespace backend.Models;

public class User : IdentityUser
{
    
}